--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+
+    <!-- header on page  -->
     <header class="header">
         <a href="#" class="logo"><span>Amr</span> Abo Hassab</a>
         <i class='bx bx-menu' id="menu-icon"></i>
@@ -21,10 +24,18 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
+            <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
-
         </nav>
+        <!-- color-switcher -->
+        <button class="color-switcher-icon"><i class='bx bxs-color'></i> <i class='bx bx-chevron-left'></i></button>
+        <div class="change-color">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </header>
     <!-- start home  section -->
     <section class="home" id="home">
@@ -32,13 +43,16 @@
             <h3>hello, it's me</h3>
             <h1> <span>Amr</span> Abo Hassab</h1>
             <h3>and i'm a <span class="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere saepe impedit architecto odio nam non
-                reprehenderit. Labore.</p>
+            <p> web developer specializing in creating responsive and user-friendly websites and applications. Let me
+                help you turn
+                your ideas into a digital reality</p>
             <div class="social-media">
-                <a href=""><i class='bx bxl-facebook'></i> </a>
-                <a href=""><i class='bx bxl-twitter'></i></a>
-                <a href=""><i class='bx bxl-instagram-alt'></i></a>
-                <a href=""><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://www.facebook.com/amr.mohammadabohassab" target="_blank"><i class='bx bxl-facebook'></i>
+                </a>
+                <a href="https://wa.me/01065061673" target="_blank"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://www.instagram.com/amrmohammadabo/" target="_blank"><i
+                        class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.linkedin.com/feed/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
             </div>
             <a href="#" class="btn">download CV</a>
         </div>
@@ -51,17 +65,18 @@
     <!-- start section about -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./vendor/media/photo_2024-08-09_20-44-33_LE_auto_x2_preview_rev_1.png" alt="">
+            <img src="./vendor/media/photo_2024-06-01_13-19-36.jpg" alt="">
         </div>
         <div class="all-about-content">
             <div class="about-content">
                 <h2 class="heading">About <span>me</span></h2>
                 <h3>frontend developer</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolor aspernatur nobis, ducimus quo
-                    corrupti
-                    placeat facere voluptatem odio omnis quia sint. Accusantium recusandae, hic doloremque sit dolorum
-                    quia
-                    error et voluptatibus fugiat laudantium unde est enim fuga? Corrupti, architecto.</p>
+                <p>"I’m <span>Amr</span>, a passionate web developer with a love for designing and building responsive
+                    and
+                    user-friendly web
+                    applications. I have experience working with technologies like React and JavaScript, and I’m always
+                    eager to improve my
+                    skills and stay updated with the latest trends in the programming world.</p>
                 <a href="#" class="btn">read more</a>
             </div>
 
@@ -75,28 +90,113 @@
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
-                <h3>web development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil vero placeat cupiditate commodi fugit
-                    quae!</p>
+                <h3>Web Development</h3>
+                <p>"I offer a complete range of web development services to meet your digital needs. Whether you need a
+                    new website design</p> quae!</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>web development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil vero placeat cupiditate commodi fugit
-                    quae!</p>
+                <i class='bx bx-code-curly'></i>
+                <h3>Improve  website </h3>
+                <p>"Enhance your website's speed and efficiency with optimized performance solutions, ensuring a faster,
+                    smoother user
+                    experience that keeps your visitors engaged."</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>web development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil vero placeat cupiditate commodi fugit
-                    quae!</p>
+                <i class='bx bx-code-block'></i>
+                <h3>Web Application </h3>
+                <p>"Developing advanced web applications that meet your needs and provide a seamless, efficient user
+                    experience across all
+                    devices."
+                </p>
                 <a href="#" class="btn">read more</a>
             </div>
         </div>
     </section>
     <!-- end section services -->
+
+    <!-- start section skills  -->
+    <section class="skills" id="skills">
+        <h1 class="heading">My <span>Skills</span></h1>
+        <div class="skill-main">
+            <div class="skill-left">
+                <h3 class="heading">Technical <span>Skills</span></h3>
+                <div class="skill-bar">
+                    <div class="info">
+                        <p>HTML</p>
+                        <p>80%</p>
+                    </div>
+                    <div class="bar">
+                        <span class="html"></span>
+                    </div>
+                </div>
+                <div class="skill-bar">
+                    <div class="info">
+                        <p>Css</p>
+                        <p>70%</p>
+                    </div>
+                    <div class="bar">
+                        <span class="css"></span>
+                    </div>
+                </div>
+                <div class="skill-bar">
+                    <div class="info">
+                        <p>JS</p>
+                        <p>65%</p>
+                    </div>
+                    <div class="bar">
+                        <span class="js"></span>
+                    </div>
+                </div>
+                <div class="skill-bar">
+                    <div class="info">
+                        <p>Bootstarp</p>
+                        <p>90%</p>
+                    </div>
+                    <div class="bar">
+                        <span class="bootstarp"></span>
+                    </div>
+                </div>
+                <div class="skill-bar">
+                    <div class="info">
+                        <p>React JS</p>
+                        <p>65%</p>
+                    </div>
+                    <div class="bar">
+                        <span class="react"></span>
+                    </div>
+                </div>
+                <div class="skill-bar">
+                    <div class="info">
+                        <p>GitHup</p>
+                        <p>50%</p>
+                    </div>
+                    <div class="bar">
+                        <span class="git"></span>
+                    </div>
+                </div>
+                <div class="skill-bar">
+                    <div class="info">
+                        <p>C++</p>
+                        <p>70%</p>
+                    </div>
+                    <div class="bar">
+                        <span class="c-plus"></span>
+                    </div>
+                </div>
+                <div class="skill-bar">
+                    <div class="info">
+                        <p>Jquery</p>
+                        <p>50%</p>
+                    </div>
+                    <div class="bar">
+                        <span class="jqury"></span>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!-- end section skills  -->
 
     <!-- start section projects  -->
     <section class="projects" id="projects">
@@ -113,49 +213,49 @@
             </div>
             <div class="project-card">
                 <img src="./vendor/media/pexels-photo-2047905.webp" alt="">
-                <h3>Project 1</h3>
+                <h3>Project 2</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aspernatur recusandae aliquam dicta
                     ullam temporibus id commodi amet doloribus accusamus.</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="project-card">
                 <img src="./vendor/media/pexels-photo-2047905.webp" alt="">
-                <h3>Project 1</h3>
+                <h3>Project 3</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aspernatur recusandae aliquam dicta
                     ullam temporibus id commodi amet doloribus accusamus.</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="project-card">
                 <img src="./vendor/media/pexels-photo-2047905.webp" alt="">
-                <h3>Project 1</h3>
+                <h3>Project 4</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aspernatur recusandae aliquam dicta
                     ullam temporibus id commodi amet doloribus accusamus.</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="project-card">
                 <img src="./vendor/media/pexels-photo-2047905.webp" alt="">
-                <h3>Project 1</h3>
+                <h3>Project 5</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aspernatur recusandae aliquam dicta
                     ullam temporibus id commodi amet doloribus accusamus.</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="project-card">
                 <img src="./vendor/media/pexels-photo-2047905.webp" alt="">
-                <h3>Project 1</h3>
+                <h3>Project 6</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aspernatur recusandae aliquam dicta
                     ullam temporibus id commodi amet doloribus accusamus.</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="project-card">
                 <img src="./vendor/media/pexels-photo-2047905.webp" alt="">
-                <h3>Project 1</h3>
+                <h3>Project 7</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aspernatur recusandae aliquam dicta
                     ullam temporibus id commodi amet doloribus accusamus.</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="project-card">
                 <img src="./vendor/media/pexels-photo-2047905.webp" alt="">
-                <h3>Project 1</h3>
+                <h3>Project 8</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aspernatur recusandae aliquam dicta
                     ullam temporibus id commodi amet doloribus accusamus.</p>
                 <a href="#" class="btn">read more</a>
@@ -190,10 +290,11 @@
     <!-- start footer -->
     <footer class="footer">
         <div class="social-media">
-            <a href=""><i class='bx bxl-facebook'></i> </a>
-            <a href=""><i class='bx bxl-twitter'></i></a>
-            <a href=""><i class='bx bxl-instagram-alt'></i></a>
-            <a href=""><i class='bx bxl-linkedin-square'></i></a>
+            <a href="https://www.facebook.com/amr.mohammadabohassab" target="_blank"><i class='bx bxl-facebook'></i>
+            </a>
+            <a href="https://wa.me/01065061673" target="_blank"><i class='bx bxl-whatsapp'></i></a>
+            <a href="https://www.instagram.com/amrmohammadabo/" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
         </div>
         <ul>
             <li>
@@ -221,7 +322,9 @@
     </footer>
     <!-- end footer -->
 
-
+    <!-- this button top  -->
+    <button class="btn-top" id="btn-top"><i class='bx bx-up-arrow-alt'></i></button>
+    <!-- this button top  -->
 
     <!-- scroll Reveal  -->
     <script src="https://unpkg.com/scrollreveal"></script>
